--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -42,7 +42,7 @@ html, body {
 
 #toc > ul > li > a > span {
   float: right;
-  background-color: #2484FF;
+  background-color: #6A5EEE;
   border-radius: 40px;
   width: 20px;
 }
@@ -226,7 +226,7 @@ html, body {
   top: 0;
   left: 0;
   z-index: 100;
-  color: #000;
+  color: #0E0722;
   text-decoration: none;
   font-weight: bold;
   opacity: 0.7;
